# Q

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
QMessage/: CMakeLists.txt  QMessage.cpp  QMessage.h  message.h
QMessage/cryptopp/: .gitignore
QMessage/cryptopp/share/cmake/cryptopp/: cryptopp-static-targets-release.cmake  cryptopp-static-targets.cmake
QMessage/cryptopp/share/pkgconfig/: cryptopp.pc
QMessage/include/: QMessage.h  ServerSocket.h  UDPClient.h  UDPServer.h  UseImgui.h  console.h  console2.h  encrypt.h  message.h  showimgui.h  util.h
QMessage/liboqs-cpp/: CHANGES.txt  CMakeLists.txt
QMessage/liboqs-cpp-0.7.2/: .gitignore  CMakeLists.txt
QMessage/liboqs-cpp-0.7.2/include/: oqs_cpp.h
QMessage/liboqs-cpp-0.7.2/liboqsDLL/include/oqs/: aes.h
QMessage/liboqs-cpp-0.7.2/liboqsDLL/lib/: oqs.lib
QMessage/liboqs-cpp-0.7.2/liboqsDLL/lib/cmake/liboqs/: liboqsTargets.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/cmake/: liboqsTargets.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/common/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/common/sha3/xkcp_low/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/kem/classic_mceliece/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/kem/frodokem/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/kem/hqc/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/kem/kyber/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/kem/ntru/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/sig/dilithium/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/sig/falcon/: cmake_install.cmake
QMessage/liboqs-cpp-0.7.2/liboqsDLL/src/sig/sphincs/: cmake_install.cmake
QMessage/liboqs-cpp/liboqsDLL/include/oqs/: oqsconfig.h
QMessage/liboqs-cpp/liboqsDLL/lib/cmake/liboqs/: liboqsTargets-relwithdebinfo.cmake
QMessage/src/: CMakeLists.txt  QMessage.cpp  ServerSocket.cpp  UDPClient.cpp  UDPServer.cpp  UseImgui.cpp  message.cpp  showimgui.cpp  util.cpp
